<resources>
    <string name="app_name">Weather</string>
    <string name="alerts">Alerts</string>
    <string name="saved_locations">Saved Locations</string>
    <string name="search_for_a_place">Search for a place</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Cloud</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="week_forecast">WEEK FORECAST</string>
    <string name="settings">Settings</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="kelvin">Kelvin</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="miles_hour">Miles/hour</string>
    <string name="meter_sec">Meter/sec</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="notification">Notification</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="address">Address:</string>
    <string name="view">View</string>
    <string name="set_as_home">Set As Home</string>
    <string name="cancel">Cancel</string>
    <string name="don_t_forget_to_check_the_weather">Don\'t forget to check the weather!</string>
    <string name="dismiss">Dismiss</string>
    <string name="delete_alert">Delete Alert</string>
    <string name="are_you_sure_you_want_to_delete_this_alert">Are you sure you want to delete this alert?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="overlay_permission_is_required_to_display_the_alarm_screen">Overlay permission is required to display the alarm screen.</string>
    <string name="exact_alarm_permission_is_required_to_set_alarms">Exact alarm permission is required to set alarms.</string>
    <string name="alarm_set">Alarm set!</string>
    <string name="delete_location">Delete Location</string>
    <string name="are_you_sure_you_want_to_delete_this_location">Are you sure you want to delete this location?</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="error">Error: %1$s</string>
    <string name="no_address_found">No Address Found</string>
    <string name="no_results_found">No results found</string>
    <string name="no_network_using_saved_data">No network. Using saved data.</string>
    <string name="location_saved_successfully">Location saved successfully</string>
    <string name="no_network_connection_data_loaded_from_cache">No network connection. Data loaded from cache.</string>
    <string name="location_permission_is_required_to_access_home_screen_features">Location permission is required to access home screen features.</string>
    <string name="no_location_saved_please_enable_location_services">No location saved. Please enable location services.</string>
    <string name="enable_location_services">Enable Location Services</string>
    <string name="location_services_are_required_to_access_the_home_screen_do_you_want_to_enable_them">Location services are required to access the home screen. Do you want to enable them?</string>
    <string name="choose_from_maps">Choose From Maps</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="m_s">m/s</string>
    <string name="mph">mph</string>
    <string name="hpa">%1$s hpa</string>
    <string name="nothing_saved_yet">Nothing Saved yet</string>
    <string name="language_change">Language Change</string>
    <string name="changing_the_language_will_exit_the_app_please_reopen_the_app_to_see_the_changes">Changing the language will automatically restart the app to see the changes.</string>
    <string name="ok">OK</string>
    <string name="clear_sky">clear sky</string>
    <string name="light_rain">light rain</string>
    <string name="overcast_clouds">overcast clouds</string>
    <string name="moderate_rain">moderate rain</string>
    <string name="light_snow">light snow</string>
    <string name="snow">snow</string>
    <string name="broken_clouds">broken clouds</string>
    <string name="scattered_clouds">scattered clouds</string>
    <string name="few_clouds">few clouds</string>
    <string name="weather">Weather</string>
    <string name="good_morning">Good Morning.</string>
    <string name="current_temperature_c">Current Temperature: %1$s°C</string>
    <string name="good_afternoon">Good Afternoon.</string>
    <string name="good_evening">Good Evening.</string>
</resources>