<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/latitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/latitude_text"
        app:layout_constraintStart_toEndOf="@+id/latitude_text"
        app:layout_constraintTop_toTopOf="@+id/latitude_text"
        tools:text="00000000000000" />

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/longitude"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/latitude_text"
        app:layout_constraintTop_toBottomOf="@+id/latitude_text" />

    <TextView
        android:id="@+id/longitude_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/longitude_text"
        app:layout_constraintEnd_toEndOf="@+id/latitude_value"
        app:layout_constraintStart_toStartOf="@+id/latitude_value"
        app:layout_constraintTop_toTopOf="@+id/longitude_text"
        tools:text="00000000000000" />

    <TextView
        android:id="@+id/address_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/address"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/longitude_text"
        app:layout_constraintTop_toBottomOf="@+id/longitude_text" />

    <TextView
        android:id="@+id/address_value"
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/longitude_value"
        app:layout_constraintTop_toTopOf="@+id/address_text"
        tools:text="00000000000000" />


    <Button
        android:id="@+id/view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0A679B"
        android:text="@string/view"
        app:layout_constraintEnd_toStartOf="@+id/set_as_home"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_value" />

    <Button
        android:id="@+id/set_as_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#0A679B"
        android:text="@string/set_as_home"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_button"
        app:layout_constraintTop_toBottomOf="@+id/address_value" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0A679B"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/set_as_home"
        app:layout_constraintTop_toTopOf="@+id/view_button" />
</androidx.constraintlayout.widget.ConstraintLayout>